--- a/next.html
+++ b/next.html
@@ -11,12 +11,12 @@
   <h2>Next Steps</h2>
   <nav role="navigation">
     <ul>
-      <li>Introduction to HTML</li>
-      <li>HTML syntax</li>
-      <li>Structuring pages</li>
-      <li>Creating links</li>
-      <li>HTML reference</li>
-      <li>Next steps</li>
+      <li><a href="intro.html" title="Introduction to HTML">Introduction to HTML</a></li>
+      <li><a href="syntax.html" title="HTML syntax">HTML syntax</a></li>
+      <li><a href="structure.html" title="Structuring pages">Structuring pages</a></li>
+      <li><a href="links.html" title="Creating links">Creating links</a></li>
+      <li><a href="reference.html" title="HTML Reference">HTML reference</a></li>
+      <li><a href="next.html" title="Next steps">Next steps</a></li>
     </ul>
   </nav>
 </header>
@@ -70,6 +70,7 @@
 </main>
 <footer role="contentinfo">
   <p><a href="http://www.csun.edu" title="csun.edu" target="_blank">CSUN</a> 18111 Nordhoff St Northridge, CA 91330</p>
+  <p><a href="https://twitter.com/csunorthridge?s=20" title="twitter_CSUN" target="_blank">Follow us on Twitter</a></p>
 </footer>
 </body>
 </html>
